fixed shifting error

--- a/styles.css
+++ b/styles.css
@@ -572,6 +572,7 @@ img {
   font-size: 1.125rem;
   letter-spacing: 0.05em;
   margin-bottom: 2rem;
+  min-height: 1.6em;
 }
 
 @media (min-width: 768px) {
